fix(ui5-popover): flip horizontalAlign Right with Left and vice versa in RTL
Fixes: https://github.com/SAP/ui5-webcomponents/issues/6605

--- a/packages/main/test/pages/styles/Popover.css
+++ b/packages/main/test/pages/styles/Popover.css
@@ -40,14 +40,10 @@ ui5-date-picker,
     height: 400px
 }
 
-.popover9auto {
-    height: 3rem;
-    background: red;
-}
-
 .popover10auto {
     height: 3rem;
     background: yellow;
+    margin: 0 1rem;
 }
 
 .popover11auto {
